added list and no connection warning

--- a/res/layout/drawer.xml
+++ b/res/layout/drawer.xml
@@ -4,7 +4,9 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:background="#DDD"
+        >
 
     <!-- The main content view -->
 
@@ -31,9 +33,7 @@
             android:layout_width="240dp"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:background="#111"
-            android:choiceMode="singleChoice"
-            android:divider="@android:color/transparent"
-            android:dividerHeight="0dp" />
+            android:background="#333"
+            android:choiceMode="singleChoice" />
 
 </android.support.v4.widget.DrawerLayout>
