--- a/res/layout/category_fragment.xml
+++ b/res/layout/category_fragment.xml
@@ -2,12 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-        >
-    <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="category"
+              android:layout_height="fill_parent">
+
+    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+              android:visibility="gone"
+              android:id="@+id/categoryList"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content" />
+
+    <TextView android:layout_width="fill_parent" android:layout_height="fill_parent"
+            android:visibility="gone"
+            android:gravity="center"
+            android:text="Connection Failed"
+            android:textSize="25dp"
+            android:id="@+id/noConnectionAlert"
             />
 </LinearLayout>
 
